@@ -1,0 +1,9 @@
+<?php
+
+//$stack = new SplDoublyLinkedList();
+//
+//$stack[] = 'one';
+//$stack->offsetSet(0, 'test');
+////$stack->offsetSet(0, 'one');
+//
+//var_dump($stack);
